project_milestone4/pr4_mine2/TackParser.java
// Generated from Tack.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TackParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, BOOL=13, ELSE=14, FOR=15, FUN=16, IF=17, 
		IN=18, INT=19, STRING=20, VOID=21, WHILE=22, ARROW=23, DOT=24, COLON=25, 
		COLONEQ=26, COMMA=27, EQ=28, SEMI=29, LBRACKET=30, RBRACKET=31, LCURLY=32, 
		RCURLY=33, LPAREN=34, RPAREN=35, LOGIC_OR_OP=36, LOGIC_AND_OP=37, BOOL_LIT=38, 
		NULL_LIT=39, ID=40, INT_LIT=41, STRING_LIT=42, WS=43, NEWLINE=44, COMMENT=45;
	public static final int
		RULE_program = 0, RULE_tester = 1, RULE_funDef = 2, RULE_funDefList = 3, 
		RULE_funDefListTail = 4, RULE_type = 5, RULE_arrayType = 6, RULE_recordType = 7, 
		RULE_fieldTypeList = 8, RULE_fieldTypeListTail = 9, RULE_fieldType = 10, 
		RULE_boolType = 11, RULE_intType = 12, RULE_stringType = 13, RULE_funType = 14, 
		RULE_returnType = 15, RULE_voidType = 16, RULE_stmt = 17, RULE_varDef = 18, 
		RULE_assignStmt = 19, RULE_blockStmt = 20, RULE_callStmt = 21, RULE_forStmt = 22, 
		RULE_ifStmt = 23, RULE_returnStmt = 24, RULE_whileStmt = 25, RULE_stmtList = 26, 
		RULE_stmtListTail = 27, RULE_expr = 28, RULE_logicOrExpr = 29, RULE_logicOrExprTail = 30, 
		RULE_logicAndExpr = 31, RULE_logicAndExprTail = 32, RULE_eqExpr = 33, 
		RULE_eqExprTail = 34, RULE_relExpr = 35, RULE_relExprTail = 36, RULE_addExpr = 37, 
		RULE_addExprTail = 38, RULE_multExpr = 39, RULE_multExprTail = 40, RULE_prefixExpr = 41, 
		RULE_postfixExpr = 42, RULE_postfixExprTail = 43, RULE_emptyPostfixTail = 44, 
		RULE_callExpr = 45, RULE_callActuals = 46, RULE_callExprTail = 47, RULE_castExprTail = 48, 
		RULE_fieldExprTail = 49, RULE_subscriptExprTail = 50, RULE_exprList = 51, 
		RULE_exprListTail = 52, RULE_primExpr = 53, RULE_parenExpr = 54, RULE_arrayLit = 55, 
		RULE_recordLit = 56, RULE_fieldLitList = 57, RULE_fieldLitListTail = 58, 
		RULE_fieldLit = 59, RULE_boolLit = 60, RULE_intLit = 61, RULE_nullLit = 62, 
		RULE_stringLit = 63, RULE_fieldId = 64, RULE_funId = 65, RULE_varId = 66, 
		RULE_eqOp = 67, RULE_relOp = 68, RULE_addOp = 69, RULE_multOp = 70, RULE_prefixOp = 71;
	public static final String[] ruleNames = {
		"program", "tester", "funDef", "funDefList", "funDefListTail", "type", 
		"arrayType", "recordType", "fieldTypeList", "fieldTypeListTail", "fieldType", 
		"boolType", "intType", "stringType", "funType", "returnType", "voidType", 
		"stmt", "varDef", "assignStmt", "blockStmt", "callStmt", "forStmt", "ifStmt", 
		"returnStmt", "whileStmt", "stmtList", "stmtListTail", "expr", "logicOrExpr", 
		"logicOrExprTail", "logicAndExpr", "logicAndExprTail", "eqExpr", "eqExprTail", 
		"relExpr", "relExprTail", "addExpr", "addExprTail", "multExpr", "multExprTail", 
		"prefixExpr", "postfixExpr", "postfixExprTail", "emptyPostfixTail", "callExpr", 
		"callActuals", "callExprTail", "castExprTail", "fieldExprTail", "subscriptExprTail", 
		"exprList", "exprListTail", "primExpr", "parenExpr", "arrayLit", "recordLit", 
		"fieldLitList", "fieldLitListTail", "fieldLit", "boolLit", "intLit", "nullLit", 
		"stringLit", "fieldId", "funId", "varId", "eqOp", "relOp", "addOp", "multOp", 
		"prefixOp"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'=='", "'!='", "'<='", "'<'", "'>='", "'>'", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'!'", "'bool'", "'else'", "'for'", "'fun'", "'if'", "'in'", 
		"'int'", "'string'", "'void'", "'while'", "'->'", "'.'", "':'", "':='", 
		"','", "'='", "';'", "'['", "']'", "'{'", "'}'", "'('", "')'", "'||'", 
		"'&&'", null, "'null'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "BOOL", "ELSE", "FOR", "FUN", "IF", "IN", "INT", "STRING", "VOID", 
		"WHILE", "ARROW", "DOT", "COLON", "COLONEQ", "COMMA", "EQ", "SEMI", "LBRACKET", 
		"RBRACKET", "LCURLY", "RCURLY", "LPAREN", "RPAREN", "LOGIC_OR_OP", "LOGIC_AND_OP", 
		"BOOL_LIT", "NULL_LIT", "ID", "INT_LIT", "STRING_LIT", "WS", "NEWLINE", 
		"COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tack.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TackParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program v;
		public FunDefListContext fs;
		public TerminalNode EOF() { return getToken(TackParser.EOF, 0); }
		public FunDefListContext funDefList() {
			return getRuleContext(FunDefListContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			((ProgramContext)_localctx).fs = funDefList();
			setState(145);
			match(EOF);
			((ProgramContext)_localctx).v =  new Program(new Location(_localctx), ((ProgramContext)_localctx).fs.v);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TesterContext extends ParserRuleContext {
		public Tester v;
		public FunTypeContext f;
		public TerminalNode EOF() { return getToken(TackParser.EOF, 0); }
		public FunTypeContext funType() {
			return getRuleContext(FunTypeContext.class,0);
		}
		public TesterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tester; }
	}

	public final TesterContext tester() throws RecognitionException {
		TesterContext _localctx = new TesterContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tester);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			((TesterContext)_localctx).f = funType();
			setState(149);
			match(EOF);
			((TesterContext)_localctx).v =  new Tester(new Location(_localctx), ((TesterContext)_localctx).f.v);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDefContext extends ParserRuleContext {
		public FunDef v;
		public FunIdContext i;
		public FunTypeContext t;
		public BlockStmtContext b;
		public TerminalNode EQ() { return getToken(TackParser.EQ, 0); }
		public TerminalNode FUN() { return getToken(TackParser.FUN, 0); }
		public FunIdContext funId() {
			return getRuleContext(FunIdContext.class,0);
		}
		public FunTypeContext funType() {
			return getRuleContext(FunTypeContext.class,0);
		}
		public BlockStmtContext blockStmt() {
			return getRuleContext(BlockStmtContext.class,0);
		}
		public FunDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDef; }
	}

	public final FunDefContext funDef() throws RecognitionException {
		FunDefContext _localctx = new FunDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			((FunDefContext)_localctx).i = funId();
			setState(153);
			match(EQ);
			setState(154);
			match(FUN);
			setState(155);
			((FunDefContext)_localctx).t = funType();
			setState(156);
			((FunDefContext)_localctx).b = blockStmt();
			((FunDefContext)_localctx).v =  new FunDef(new Location(_localctx), ((FunDefContext)_localctx).i.v, ((FunDefContext)_localctx).t.v, ((FunDefContext)_localctx).b.v);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDefListContext extends ParserRuleContext {
		public FunDefListHead v;
		public FunDefContext h;
		public FunDefListTailContext t;
		public FunDefContext funDef() {
			return getRuleContext(FunDefContext.class,0);
		}
		public FunDefListTailContext funDefListTail() {
			return getRuleContext(FunDefListTailContext.class,0);
		}
		public FunDefListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDefList; }
	}

	public final FunDefListContext funDefList() throws RecognitionException {
		FunDefListContext _localctx = new FunDefListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funDefList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			((FunDefListContext)_localctx).h = funDef();
			setState(160);
			((FunDefListContext)_localctx).t = funDefListTail();
			((FunDefListContext)_localctx).v =  new FunDefListHead(new Location(_localctx), ((FunDefListContext)_localctx).h.v, ((FunDefListContext)_localctx).t.v);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDefListTailContext extends ParserRuleContext {
		public FunDefListTail v;
		public FunDefContext h;
		public FunDefListTailContext t;
		public FunDefContext funDef() {
			return getRuleContext(FunDefContext.class,0);
		}
		public FunDefListTailContext funDefListTail() {
			return getRuleContext(FunDefListTailContext.class,0);
		}
		public FunDefListTailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDefListTail; }
	}

	public final FunDefListTailContext funDefListTail() throws RecognitionException {
		FunDefListTailContext _localctx = new FunDefListTailContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funDefListTail);
		try {
			setState(168);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(163);
				((FunDefListTailContext)_localctx).h = funDef();
				setState(164);
				((FunDefListTailContext)_localctx).t = funDefListTail();
				((FunDefListTailContext)_localctx).v =  new FunDefListTail(new Location(_localctx), ((FunDefListTailContext)_localctx).h.v, ((FunDefListTailContext)_localctx).t.v);
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				((FunDefListTailContext)_localctx).v =  new FunDefListTail(new Location(_localctx));
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type v;
		public ArrayTypeContext at;
		public RecordTypeContext rt;
		public BoolTypeContext bt;
		public IntTypeContext it;
		public StringTypeContext st;
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public RecordTypeContext recordType() {
			return getRuleContext(RecordTypeContext.class,0);
		}
		public BoolTypeContext boolType() {
			return getRuleContext(BoolTypeContext.class,0);
		}
		public IntTypeContext intType() {
			return getRuleContext(IntTypeContext.class,0);
		}
		public StringTypeContext stringType() {
			return getRuleContext(StringTypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		try {
			setState(185);
			switch (_input.LA(1)) {
			case LBRACKET:
				enterOuterAlt(_localctx, 1);
				{
				setState(170);
				((TypeContext)_localctx).at = arrayType();
				((TypeContext)_localctx).v =  ((TypeContext)_localctx).at.v;
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(173);
				((TypeContext)_localctx).rt = recordType();
				((TypeContext)_localctx).v =  ((TypeContext)_localctx).rt.v;
				}
				break;
			case BOOL:
				enterOuterAlt(_localctx, 3);
				{
				setState(176);
				((TypeContext)_localctx).bt = boolType();
				((TypeContext)_localctx).v =  ((TypeContext)_localctx).bt.v;
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 4);
				{
				setState(179);
				((TypeContext)_localctx).it = intType();
				((TypeContext)_localctx).v =  ((TypeContext)_localctx).it.v;
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 5);
				{
				setState(182);
				((TypeContext)_localctx).st = stringType();
				((TypeContext)_localctx).v =  ((TypeContext)_localctx).st.v;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayTypeContext extends ParserRuleContext {
		public ArrayType v;
		public TypeContext typ;
		public TerminalNode LBRACKET() { return getToken(TackParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(TackParser.RBRACKET, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ArrayTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayType; }
	}

	public final ArrayTypeContext arrayType() throws RecognitionException {
		ArrayTypeContext _localctx = new ArrayTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arrayType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(LBRACKET);
			setState(188);
			((ArrayTypeContext)_localctx).typ = type();
			setState(189);
			match(RBRACKET);
			((ArrayTypeContext)_localctx).v =  new ArrayType(new Location(_localctx), ((ArrayTypeContext)_localctx).typ.v);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecordTypeContext extends ParserRuleContext {
		public RecordType v;
		public FieldTypeListContext fs;
		public TerminalNode LPAREN() { return getToken(TackParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TackParser.RPAREN, 0); }
		public FieldTypeListContext fieldTypeList() {
			return getRuleContext(FieldTypeListContext.class,0);
		}
		public RecordTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recordType; }
	}

	public final RecordTypeContext recordType() throws RecognitionException {
		RecordTypeContext _localctx = new RecordTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_recordType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			match(LPAREN);
			setState(193);
			((RecordTypeContext)_localctx).fs = fieldTypeList();
			setState(194);
			match(RPAREN);
			((RecordTypeContext)_localctx).v =  new RecordType(new Location(_localctx), ((RecordTypeContext)_localctx).fs.v);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldTypeListContext extends ParserRuleContext {
		public List<FieldType> v;
		public FieldTypeContext h;
		public FieldTypeListTailContext t;
		public FieldTypeContext fieldType() {
			return getRuleContext(FieldTypeContext.class,0);
		}
		public FieldTypeListTailContext fieldTypeListTail() {
			return getRuleContext(FieldTypeListTailContext.class,0);
		}
		public FieldTypeListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldTypeList; }
	}
